# building-3d-game-assignment-1

./: .gitignore  Assignment1.cpp  CMakeLists.txt  README.md  Shader.cpp  Shader.h
shaders/: Assignment1.fs  Assignment1.vs
